# nutrimise

./: .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  init_mypy.py  makefile  manage.py  mypy.ini  pyproject.toml  pytest.ini
.github/: .env.ci
.github/workflows/: ci.yml
backend/: .env.example  init_mypy.py  makefile  manage.py  pyproject.toml
backend/data/ingredients-csvs/example/: ingredient-category.csv  ingredient-nutritional-information.csv  ingredient.csv
backend/data/ingredients-csvs/test/: ingredient-nutritional-information.csv
backend/deployment/: entrypoint.sh
backend/src/nutrimise/app/menus/: __init__.py
backend/src/nutrimise/app/recipes/: _exceptions.py  _extract_recipe_from_image.py  _extraction_helpers.py
backend/src/nutrimise/config/: asgi.py  urls.py  wsgi.py
backend/src/nutrimise/data/ingredients/: apps.py  operations.py  queries.py
backend/src/nutrimise/data/ingredients/migrations/: 0001_initial.py
backend/src/nutrimise/data/ingredients/models/: _dietary_requirement.py  _ingredient.py  _nutrient.py
backend/src/nutrimise/data/menus/migrations/: 0002_alter_menuembedding_model_and_more.py
backend/src/nutrimise/data/menus/models/: _menu.py
backend/src/nutrimise/data/pgvector/migrations/: 0001_enable_vector_extension.py
backend/src/nutrimise/data/recipes/: apps.py  operations.py  queries.py
backend/src/nutrimise/data/recipes/migrations/: 0002_alter_recipeembedding_model_savedrecipe.py  0003_alter_recipeembedding_model_and_more.py
backend/src/nutrimise/data/recipes/models/: __init__.py  _recipe.py  _recipe_author.py  _saved_recipe.py
backend/src/nutrimise/domain/data_extraction/: __init__.py  _config.py  _constants.py
backend/src/nutrimise/domain/data_extraction/_vendors/: _base.py
backend/src/nutrimise/domain/embeddings/: __init__.py  _config.py  _embedding.py  _helpers.py
backend/src/nutrimise/domain/embeddings/_vendors/: _broken.py  _fake.py  _openai.py
backend/src/nutrimise/domain/menus/: __init__.py  _shopping_list.py
backend/src/nutrimise/domain/optimisation/: __init__.py  _optimise.py
backend/src/nutrimise/domain/optimisation/_constraints/: _nutrient.py
backend/src/nutrimise/domain/optimisation/_objectives/: __init__.py  _variety.py
backend/src/nutrimise/interfaces/admin/admin/: __init__.py  _recipes.py
backend/src/nutrimise/interfaces/admin/forms/: __init__.py  _menus.py
backend/src/nutrimise/interfaces/admin/templates/admin/menus/partials/: menu-item.html
backend/src/nutrimise/interfaces/admin/views/: __init__.py  _menus.py  _types.py
backend/src/nutrimise/interfaces/frontend_api/: app.py  auth.py  exception_handlers.py
backend/src/nutrimise/interfaces/frontend_api/routers/: __init__.py  _general.py  _recipes.py
backend/src/nutrimise/interfaces/frontend_api/schemas/: __init__.py  _recipes.py
backend/src/nutrimise/interfaces/management/: apps.py
backend/src/nutrimise/interfaces/management/management/commands/: extract_recipes_from_images.py  import_from_csv.py
backend/testing/factories/data/: __init__.py  _ingredients.py  _recipes.py
backend/testing/factories/domain/: _recipes.py
backend/testing/factories/images/: __init__.py  _factories.py
backend/tests/functional/admin/menus/: test_create_or_update_menu.py
backend/tests/functional/admin/recipes/: test_create_or_update_recipe.py  test_extract_recipe_from_image.py  test_extract_recipe_from_url.py  test_semantic_search_recipes.py  test_view_recipe_details.py
backend/tests/functional/frontend_api/: conftest.py
backend/tests/functional/frontend_api/general/: test_version.py
backend/tests/functional/frontend_api/recipes/: test_list_recipes.py  test_list_saved_recipes.py  test_save_recipe.py
backend/tests/functional/management/: conftest.py  test_create_recipe_embeddings.py  test_import_from_csv.py
backend/tests/integration/app/menus/: test_create_or_update_menu_embedding.py  test_optimise_menu.py
backend/tests/integration/app/recipes/: test_create_or_update_recipe_embedding.py  test_extract_recipe_from_image.py  test_extract_recipe_from_url.py
backend/tests/integration/data/menus/: test_queries.py
backend/tests/integration/data/menus/models/: test_menu.py
backend/tests/integration/data/recipes/: test_operations.py
backend/tests/integration/data/recipes/models/: test_recipe_author.py  test_recipe_embedding.py  test_recipe_ingredient.py
backend/tests/specialized/: test_config.py
backend/tests/unit/domain/data_extraction/: test_config.py
backend/tests/unit/domain/embeddings/_vendors/: test_openai.py
backend/tests/unit/domain/menus/: test_shopping_list.py
backend/tests/unit/domain/optimisation/: test_variables.py
backend/tests/unit/domain/optimisation/_constraints/: test_fulfillment.py
data/: .env.example
data/example/: dietary-requirement.csv  ingredient-category.csv  ingredient-nutritional-information.csv  ingredient.csv  nutrient.csv
data/ingredients-csvs/example/: dietary-requirement.csv  nutrient.csv
data/ingredients-csvs/test/: ingredient-category.csv  ingredient-nutritional-information.csv  ingredient.csv  nutrient.csv
frontend/: README.md  index.html  makefile  openapi-ts.config.ts  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSidebar.tsx  RecipeCard.tsx  RecipeDetails.tsx
frontend/src/contexts/: MealPlannerContext.tsx
frontend/src/data/: recipes.ts
frontend/src/hooks/: useKeyPress.ts  useKeyboardShortcuts.ts
frontend/src/pages/: Nutrition.tsx  Plans.tsx  Recipes.tsx
reciply/: manage.py
reciply/app/menus/: __init__.py  _add_item_to_menu.py  _add_items_to_menu.py  (+4 more)
reciply/config/: env.py  settings.py  urls.py  wsgi.py
reciply/data/: constants.py
requirements/: app-requirements.txt  ci-requirements.txt  dev-requirements.txt  test-requirements.txt
testing/factories/: images.py
tests/: conftest.py  factories.py
tests/factories/: __init__.py  _auth.py  _files.py  _ingredients.py  _menus.py  _recipes.py
tests/helpers/: storage.py
tests/integration/: conftest.py
(+414 files in other folders)
