[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "reciply"
version = "0"
requires-python = ">= 3.11"

# ----------
# Dependencies
# ----------

dependencies = [
    "attrs",
    "django",
    "django-configurations",
    "psycopg[binary]",
    "python-decouple",
    "pulp"
]

[project.optional-dependencies]

ci = [
    # Test framework
    "pytest",
    "pytest-django",
    # Test setup
    "factory_boy",
    # Functional testing
    "django-webtest",
    "webtest",
    # Linting / typing
    "black",
    "django-stubs",
    "flake8",
    "isort",
    "mypy",
    # Needs relegating to `dev`
    "django-extensions",
]

dev = [
    # Git
    "pre-commit",
    # Pytest plugins for assisting local dev (but not used in CI)
    "pytest-random-order",
    "pytest-repeat",
]

# ----------
# Tooling
# ----------

[tool.pytest.ini_options]
pythonpath = "./src/reciply"
DJANGO_SETTINGS_MODULE = "reciply.config.settings"
DJANGO_CONFIGURATION = "Settings"

filterwarnings = [
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated:django.utils.deprecation.RemovedInDjango60Warning:django",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["venv", "tests"]
plugins = ["./init_mypy.py"]

[[tool.mypy.overrides]]
module = "django.conf.settings"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "reciply.config.settings"
strict_settings = false

