[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nutrimise"
version = "0"
requires-python = ">= 3.11"

# ----------
# Dependencies
# ----------

dependencies = [
    "attrs",
    "django",
    "django-configurations",
    "openai",
    "pgvector",
    "Pillow",
    "psycopg[binary]",
    "python-decouple",
    "pulp",
    "pydantic",
    # Production
    "gunicorn",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]

ci = [
    # Test framework
    "pytest",
    "pytest-django",
    "pytest-httpx",
    # Test setup
    "factory_boy",
    # Functional testing
    "django-webtest",
    "webtest",
    # Linting / typing
    "django-stubs",
    "mypy",
    "import-linter",
    "ruff",
    # Needs relegating to `dev`
    "django-extensions",
]

local = [
    # Git
    "pre-commit",
    # Pytest plugins for assisting local dev (but not used in CI)
    "pytest-random-order",
    "pytest-repeat",
]

# ----------
# Tooling
# ----------

[tool.pytest.ini_options]
pythonpath = "./src/nutrimise"
DJANGO_SETTINGS_MODULE = "nutrimise.config.settings"
DJANGO_CONFIGURATION = "Settings"

filterwarnings = [
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated:django.utils.deprecation.RemovedInDjango60Warning:django",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["venv"]
plugins = ["./init_mypy.py"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "nutrimise.config.settings"
strict_settings = false


[tool.importlinter]
root_package = "nutrimise"

[[tool.importlinter.contracts]]
name = "Top level layers"
type = "layers"
containers = "nutrimise"
layers = [
    "config",
    "interfaces",
    "app",
    "data",
    "domain",
]
exhaustive = true

[[tool.importlinter.contracts]]
name = "Domain layers"
type = "layers"
containers = "nutrimise.domain"
layers = [
    "optimisation | data_extraction",
    "menus",
    "recipes",
    "ingredients",
    "embeddings",
]
exhaustive = true

[tool.ruff]

line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]

select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]

ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
# Sections
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["nutrimise", "tests"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"*__init__.py" = ["F401"]  # Allow 'unused' imports in __init__.py files.
